<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_new"
        android:orderInCategory="101"
        android:title="@string/action_new"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_blacklist"
        android:orderInCategory="101"
        android:title="@string/action_blacklist"
        app:showAsAction="never"/>
    <group
        android:checkableBehavior="single"
        android:orderInCategory="102" >

        <item
            android:id="@+id/app_bar_switch"
            android:title="@string/action_sort"/>
    </group>

</menu>